# skills2026-lekiwi

./: .gitignore  LIVE_PICKUP_REPO_FINDINGS_20260328.md  README.md  pyproject.toml  run_local_leader_arm.command
src/skills2026/: bootstrap.py  calibration.py  cli.py  constants.py  hardware.py  logging_utils.py  paths.py  profile.py  training.py
src/skills2026/commands/: __init__.py  competition.py  doctor.py  pickup_validation.py  record.py  replay.py  setup.py  shared.py  sim_leader.py  teleop.py  train_act.py  ui.py
src/skills2026/control/: __init__.py  competition.py  fsm.py  mission.py  pickup_validation.py  primitives.py  tasks.py
src/skills2026/perception/: __init__.py  front.py  models.py  wrist.py
src/skills2026/policy/: __init__.py  act.py  smolvla.py
src/skills2026/robot/: __init__.py  lekiwi_io.py  safety.py
src/skills2026/runtime/: __init__.py  camera_scheduler.py
src/skills2026/ui/: __init__.py  app.py  service.py
tests/: test_act.py  test_cli.py  test_competition.py  test_doctor.py  test_fsm.py  test_hardware.py  test_mission.py  test_perception.py  test_pickup_validation.py  test_profile.py  test_scheduler.py  test_shared.py  test_train_act.py  test_training.py  test_ui_service.py
