[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skills2026-lekiwi"
version = "0.1.0"
description = "Plug-and-play two-camera LeKiwi ECU service system for Skills Ontario 2026."
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.0",
    "numpy>=1.26",
    "opencv-python>=4.10",
    "pyserial>=3.5",
]

[project.scripts]
skills2026 = "skills2026.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
